--- a/test programme/index.html
+++ b/test programme/index.html
@@ -37,9 +37,9 @@
             <h3>Notice Board</h3>
             <div class="notice-container">
                 <ul id="notice-list">
-                    <li>Exam schedule will be released soon.</li>
-                    <li>Prepare for syllabus updates coming this Friday.</li>
-                    <li>Group meeting scheduled for Saturday, 4 PM.</li>
+                    <li>Some syllabus are declared, others not. I've updated what we have.</li>
+                    <li>You'll get more syllabus soon, just wait for the teachers to declare them.</li>
+                    <li></li>
                 </ul>
             </div>
         </section>
