--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <h3>Notice Board</h3>
             <div class="notice-container">
                 <ul id="notice-list">
-                    <li>Exam schedule will be released soon.</li>
-                    <li>Prepare for syllabus updates coming this Friday.</li>
-                    <li>Group meeting scheduled for Saturday, 4 PM.</li>
+                    <li>More subjects will be added in syllabus.</li>
+                    <li>Some subject syllabi have not been declared by our teachers yet.</li>
+                    <li>PT-2 exam is going to held on OMR sheet & all questions are going to be MCQ.</li>
                 </ul>
             </div>
         </section>
