--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="notice-container">
                 <ul id="notice-list">
                     <li>More subjects will be added in syllabus.</li>
-                    <li>Some subject syllabi have not been declared by our teachers yet.</li>
+                    <li>Some subject syllabus have not been declared by our teachers yet.</li>
                     <li>PT-2 exam is going to held on OMR sheet & all questions are going to be MCQ.</li>
                 </ul>
             </div>
